# GlobalHack-ConfidenceMap

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PLAN.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml
.claude/commands/: check.md  demo.md  status.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  run_analysis.py
backend/confidence_map/: __init__.py  main.py
backend/confidence_map/agents/: __init__.py  accessibility_advocate.py  arch_validator.py  base.py  business_impact.py  consolidator.py  delivery_historian.py  risk_intelligence.py  spec_analyst.py
backend/confidence_map/api/: analysis.py  chat.py
backend/confidence_map/core/: __init__.py  mock_results.py  orchestrator.py  settings.py  translator.py
backend/confidence_map/models/: __init__.py  analysis.py  chat.py  events.py  findings.py
backend/evals/: __init__.py  __main__.py  golden_specs.py  runner.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_base_agent.py  test_chat.py  test_consolidator.py  test_mock_results.py  test_models.py  test_orchestrator.py
docs/: Confidence-Map-Presentation.html  accessibility.md  architecture-novabank-pagos.md  architecture-novabank-payments.md  diagram-harness-engineering.html  diagram-harness-engineering.md  diagram-llm-as-a-judge.html  diagram-llm-as-a-judge.md  diagram-spec-to-data-pipelines.html  diagram-spec-to-data-pipelines.md  hackathon-proposal.md
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/api/analyze/[id]/stream/: route.ts
frontend/components/: AccessibleSummary.tsx  AgentStatusCard.tsx  BacklogModal.tsx  ChatPanel.tsx  ConfidenceMap.tsx  DecisionTable.tsx  FindingDetail.tsx  HeatMap.tsx  LanguageSwitcher.tsx
frontend/lib/: config.ts  demo-spec.ts  export.ts  history.ts  i18n.tsx
frontend/messages/: en.json  es.json  pt-br.json
frontend/types/: index.ts
